# refinegems

./: .gitignore  .readthedocs.yaml  CITATION.cff  CSTR_refinegems.xlsx  LICENSE  MANIFEST.in  MP-AU.tsv  Pipfile  README.md  config.yaml  dev.py  id2loc.csv  main-copy.py  main.py  pyproject.toml  setup.cfg  setup.py  simulate_all.xlsx  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  docs.yml  fair-software.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
data/: cstr.gff  custom_media_file.csv  custom_media_file.tsv  e_test.xml  energy_dissipation_rxns.csv  manual_annotations.xlsx  manual_curation.xlsx  media_db.csv
data/database/: sbo_media_db.sql
data/databases/: sbo_database.db  sbo_database.sql  sbo_media_db.sql
data/sbo/: create_dbs.sql  sbo_database.db  sbo_database.sql
dev/: CB_under_construction.ipynb  README.md  TodoTree_params.txt  db_extension.ipynb  docstring-format.mustache  gapfill-testing.ipynb  growth_curves.ipynb  old_funcs.py  old_gapfill.rst  stuff.ipynb  temp.py  temp_merge.py  tutorial.ipynb  under_construction.ipynb
dev/oils_for_artificial_sebum/: get_oil_percentages.ipynb
dev/test_files/: ATCC29970_biocyc_rxns.txt
docs/: requirements.in  requirements.txt
docs/source/: api.rst  application.rst  cmd_desc.rst  conf.py  development.rst  examples.ipynb  explanantion.rst  explanation.rst  growth.rst  help.rst  in_silico_media_generation.rst  index.rst  installation.rst  library.bib  main-modules.rst  modules.rst  pathways.rst  pipeline.rst  polish.rst  refinegems.rst  usage.rst
docs/source/_static/: custom_theme.css
docs/source/config-desc/: media-yaml-howto.rst  media-yaml.rst
docs/source/database/: access.rst  available_media.rst  available_subsets.rst  db_architecture.rst  in_silico_media_generation.rst  intro.rst
docs/source/database/media/: BMS23.rst  artSw.rst  blood.rst  casa.rst  cgxii.rst  dgmm.rst  lb.rst  m9.rst  mp-au.rst  rpmi.rst  snm3.rst
docs/source/database/subsets/: CasA.rst  artSe.rst  protAA.rst
docs/source/images/: ER_database.numbers
docs/source/modules/: analysis.rst  biomass.rst  classes.rst  curation.rst  db_access.rst  developement.rst  examples.ipynb  gapfill.rst  growth.rst  pathways.rst  polish.rst  sboann.rst  utility.rst
docs/source/modules-desc/: biomass.rst  egcs.rst  examples.ipynb  gapfill.rst  growth.rst  old_gapfill.rst  pathways.rst  polish.rst  reacdirec.rst  sboann.rst  stats.rst
docs/source/modules/media/: BMS23.rst  artSw.rst  blood.rst  casa.rst  cgxii.rst  dgmm.rst  lb.rst  m9.rst  mp-au.rst  rpmi.rst  smm.rst  snm3.rst
media/: SNM3.csv  media_db.csv  media_db2.csv
modelseed/: modelseed_compounds_condensed.csv
refinegems/: CONSTRUCTION.ipynb  __init__.py  analysis_biocyc.py  analysis_db.py  analysis_db_local_version.py  analysis_kegg.py  biomass.py  charges.py  comparison.py  curate.py  cvterms.py  databases.py  entities.py  gapfill.py  genecomp.py  growth.py  investigate.py  io.py  load.py  logging.py  media_config.yml  modelseed.py  parse.py  pathways.py  polish.py  polish_carveme.py  report.py  reports.py  sbo_annotation.py  sboann.py  strains.py  test.py  util.py
refinegems/database/: media_db.sql  medium.py  sbo_mapping_db.sql  sbo_media_db.sql
src/refinegems/: __init__.py  analysis_biocyc.py  analysis_db.py  analysis_kegg.py  biomass.py  charges.py  cmd_access.py  comparison.py  core_pan.py  curate.py  cvterms.py  databases.py  entities.py  gapfill.py  growth.py  investigate.py  io.py  medium.py  modelseed.py  pathways.py  polish.py  reports.py  sboann.py  set_up.py  util.py
src/refinegems/analysis/: __init__.py  comparison.py  core_pan.py  growth.py  investigate.py
src/refinegems/classes/: __init__.py  egcs.py  gapfill.py  medium.py  reports.py
src/refinegems/classes/gap_fill/: GapFiller.py
src/refinegems/curation/: __init__.py  biomass.py  charges.py  curate.py  egcs.py  gapfill.py  miriam.py  pathways.py  polish.py
src/refinegems/curation/db_access/: __init__.py  biocyc.py  db.py  kegg.py  modelseed.py
src/refinegems/data/config/: media_config.yml
src/refinegems/data/database/: media_db.sql  sbo_media_db.sql  updated_media_db.sql
src/refinegems/data/pathway/: KEGG_pathway_metabolism.csv
src/refinegems/dev/: CB_under_construction.ipynb
src/refinegems/developement/: __init__.py  decorators.py
src/refinegems/example/example_inputs/: custom_media_file.csv  custom_media_file.tsv  modelName_gapfill_analysis_date_example.xlsx
src/refinegems/utility/: __init__.py  connections.py  cvterms.py  databases.py  db_access.py  entities.py  io.py  set_up.py  util.py
