# needed for installation of refinegems
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "refineGEMs"
version = "2.0.0-beta"  
requires-python = ">=3.10, <3.13"
authors = [
    {name = "Famke Baeuerle", email = "famke.baeuerle@gmail.com"},
    {name = "Gwendolyn O. Döbel", email = "gwendolyn.o.gusak@gmail.com"},
    {name = "Carolin Brune", email = "carolin.brune@informatik.uni-halle.de"}
]
maintainers = [
    {name = "Tobias Fehrenbach"},
    {name = "Nina Roßbach"},
]

description='refineGEMs: a python package intended to help with the curation of genome-scale metabolic models (GEMS)'
license = {text = "MIT"}
readme = 'README.md'

keywords = ['Systems Biology', 'GEM', 'Metabolic Modelling', 'Python Package']

classifiers = [
    'Topic :: Software Development :: Libraries :: Python Modules',
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python",
    "Programming Language :: SQL",
    "License :: OSI Approved :: MIT License",
    'Operating System :: OS Independent'
]

# dynamic = ['version']

dependencies = [
    # cobra changed model.add_reaction to model.add_reactions -> important in investigate.py
    "biopython>=1.79",
    "bioregistry>=0.12.0",
    "bioservices>=1.11.2",
    "click>=8.1.3",
    "cloup>=3.0.5",
    "cobra>=0.28.0", 
    "depinfo>=1.7.0",
    "gffutils>=0.10.1",
    "libchebipy>=1.0.10",
    "markupsafe>=2.0.1",
    'matplotlib >= 3.8.2',
    "memote>=0.17.0", 
    "multiprocess>=0.70.16",
    "numpy>=2.0.0",
    "ols-client>=0.1.3",
    "pandas>=2.2.2",
    'pyyaml>=6.0.1',
    "ratelimit>=2.2.1",
    'requests>=2.32.2',
    "sboannotator>=3.0.2",
    "seaborn>=0.12.2",
    "sortedcontainers>=2.4.0",
    "sqlalchemy>=2.0.0",
    "sqlite_dump>=0.1.1",
    'tqdm>=4.66.1',
    'ipywidgets', # needed to run tqdm normally without error
    "venn>=0.1.3",
    "z3-solver>=4.13.0.0",
]

[project.optional-dependencies]
# developer/docs installation dependancies
docs = ["accessible-pygments",
       "sphinx", 
       "nbsphinx",
       "sphinx_rtd_theme",
       "pandoc",
       "ipython",
       "sphinxcontrib-bibtex",
       "sphinx_copybutton",
       "pip-tools"]

[project.urls]
# homepage
repository = 'https://github.com/draeger-lab/refinegems'
documentation = 'https://refinegems.readthedocs.io/en/latest/'
"Bug Tracker" = "https://github.com/draeger-lab/refinegems/issues"

[project.scripts]
refinegems = "refinegems.cmd_access:cli"

# [tool.setuptools.dynamic]
# version = {attr = "refinegems.VERSION"}

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
"refinegems.example.example_inputs" = ['*.xlsx','*.csv']
"refinegems.data.database" = ['*.txt', '*.sql', '*.db', '*.csv']
"refinegems.data.config" = ['*.yaml','*.yml']
"refinegems.data.pathway" = ['*.csv']
