# needed for installation of refinegems
[metadata]
name = refineGEMs
version = 1.3.0-pre0
author = Famke Baeuerle and Gwendolyn O. Gusak
author_email = famke.baeuerle@gmail.com
url = https://github.com/draeger-lab/refinegems
description = refineGEMs: A Python package intended to help with the curation of genome-scale metabolic models (GEMS)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find
zip_safe=False
include_package_data=True
python_requires ='>=3.8, <3.10',
install_requires =
      bioregistry
      bioservices
      biopython == 1.79
      cobra == 0.22.0
      importlib-resources <= 5.13.0
      memote == 0.13.0
      pandas == 1.2.4
      numpy == 1.20.3
      gffutils == 0.10.1
      markupsafe == 2.0.1 
      depinfo == 1.7.0
      sortedcontainers == 2.4.0
      libchebipy == 1.0.10
      ratelimit == 2.2.1
      sqlalchemy == 1.4.43
      venn == 0.1.3
      ols-client == 0.1.3
      seaborn == 0.12.2
      click == 8.1.3

[options.entry_points]
console_scripts =
      data = refinegems.databases:main
      curate = refinegems.curate:main
      investigate = refinegems.investigate:main
      refine = refinegems.refine:main

[options.package_data]
refinegems = database/current_bigg_db_version.txt, database/sbo_media_db.sql, database/data.db
